--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 	font-weight: 400;
 	text-align: center;
 	font-size: 1.12rem;
-	margin: 3%;   
+	margin: 0%;   
 
 
 
@@ -46,7 +46,7 @@ body {
   width: 350px;
   height: 350px;
   border-radius: 0%;
-  background-image: url('/home/x33/Downloads/12.png');
+  background-image: url('');
 }
 
 .container {	
