--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .container {	
-	display: inline-block;
+	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;  
 	align-items: center;
@@ -59,8 +59,8 @@ body {
 
 
 .btn-1 {
-	width: 160px;
-	height: 70px;
+	width: 300px;
+	height: 40px;
 	border: none;
 	background: #9b2cc7; 
 	color: #ffffff;
