--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .one {
   margin-top: 2vh; 
-  background-image: url('/CV/1.jpg');
+  background-image: url('/martin-kn.github.io/1.jpg');
 }
 
 .two {
